# cc-agents

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  antigravity-install.sh  biome.json  bunfig.toml  opencode.json  package.json  pyproject.toml  ruff.toml  rulesync.jsonc  tsconfig.json
.claude/: CLAUDE.md  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: apply-10-dev.md  check-10-dev.md  init-10-dev.md  integrate-10-dev.md
.claude/commands/: migrate-to-rd3.md
commands/: hello.md
commands/10-stages-developing/: apply-10-dev.md  check-10-dev.md  (+1 more)
docs/: about_prompts.md  about_tasks.md  agent-colors.md  main_agents.md  migration-0.0-to-0.1.md  model-version-guide.md  prompt.md  rd2-architecture.md  rd2-workflow.md  rd2_migration_plan.md  reverse-engineering-oma.md  reverse-engineering-pi-mono.md  reverse-engineering-rd3.md  spec-cc-skills.md  spec-cc-skills2.md  spec-code-review-gemini.md  spec-tasks-v2.md  spec-tasks.md  spec-wt-v1.md  style_README.md  task-cli-integration.md  testing-strategy.md  todo_cc-skills-future-enhancements.md  user-manual-cc-skills.md  user-manual-cc-skills2.md  user-manual-code-review-gemini.md  user-manual-tasks.md  user-manual-wt-v1.md
magents/: README.md
scripts/: README.md  TOOL_NOTES.md  adapt-skills.sh  airunner.sh  airunner.ts  install-agents.sh  install-skills.sh  logger.ts  setup-all.sh
stubs/: freezegun.pyi  pytest.pyi
tests/: ai-runner.bats  ai-runner.test.ts  commands.bats  common.bats  magents.bats  setup-all.bats  skills.bats  subagents.bats
(+2638 files in other folders)
