[project]
name = "cc-agents"
version = "1.5.5"
description = "Configuration and management tools for Claude AI agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
