[project]
name = "cc-agents"
version = "1.5.5"
description = "Configuration and management tools for Claude AI agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "freezegun>=1.5.1",
    "requests>=2.32.5",
    "pillow>=12.1.0",
    "google-genai>=1.60.0",
    "pyyaml>=6.0.3",
    "jsoncomment>=0.4.0",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pyrightconfig]
include = ["**/*.py"]
extraPaths = [
    "plugins/rd2/skills/tasks/scripts",
]
stubPath = "./stubs"
typeCheckingMode = "standard"
